Minimal bugfixes for compiling with Windows.
Updated Visual Studio project files

--- a/FaceFramework.vcxproj.filters
+++ b/FaceFramework.vcxproj.filters
@@ -51,6 +51,15 @@
     <ClCompile Include="SingleImageSource.cpp">
       <Filter>Source Files\ImageSources</Filter>
     </ClCompile>
+    <ClCompile Include="GaborExtractor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IlluminationCorrectionFilter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TextFileSource.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FaceDetection.h">
@@ -73,6 +82,21 @@
     </ClInclude>
     <ClInclude Include="SingleImageSource.h">
       <Filter>Header Files\ImageSources</Filter>
+    </ClInclude>
+    <ClInclude Include="ImageFilter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IlluminationCorrectionFilter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FeatureExtractor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GaborExtractor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TextFileSource.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
