--- a/FaceFramework.vcxproj
+++ b/FaceFramework.vcxproj
@@ -15,10 +15,13 @@
     <ClCompile Include="FaceDetection.cpp" />
     <ClCompile Include="FaceRecognition.cpp" />
     <ClCompile Include="FacialExpressionRecognition.cpp" />
+    <ClCompile Include="GaborExtractor.cpp" />
+    <ClCompile Include="IlluminationCorrectionFilter.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="SingleImageSource.cpp" />
     <ClCompile Include="TestFunctions.cpp" />
+    <ClCompile Include="TextFileSource.cpp" />
     <ClCompile Include="VideoSource.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -26,8 +29,13 @@
     <ClInclude Include="FaceDetection.h" />
     <ClInclude Include="FaceRecognition.h" />
     <ClInclude Include="FacialExpressionRecognition.h" />
+    <ClInclude Include="FeatureExtractor.h" />
+    <ClInclude Include="GaborExtractor.h" />
+    <ClInclude Include="IlluminationCorrectionFilter.h" />
+    <ClInclude Include="ImageFilter.h" />
     <ClInclude Include="ImageSource.h" />
     <ClInclude Include="SingleImageSource.h" />
+    <ClInclude Include="TextFileSource.h" />
     <ClInclude Include="VideoSource.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -53,10 +61,12 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="OpenCV243_Debug.props" />
+    <Import Project="fftw.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="OpenCV243_Release.props" />
+    <Import Project="fftw.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
