--- a/.cproject
+++ b/.cproject
@@ -25,18 +25,20 @@
 							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.677144244" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug">
 								<option id="gnu.cpp.compiler.exe.debug.option.optimization.level.2127665642" name="Optimization Level" superClass="gnu.cpp.compiler.exe.debug.option.optimization.level" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.exe.debug.option.debugging.level.2015120183" name="Debug Level" superClass="gnu.cpp.compiler.exe.debug.option.debugging.level" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
-								<option id="gnu.cpp.compiler.option.include.paths.863067203" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths"/>
+								<option id="gnu.cpp.compiler.option.include.paths.2081629339" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.345622479" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1573551530" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug">
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.exe.debug.option.optimization.level.2125265343" name="Optimization Level" superClass="gnu.c.compiler.exe.debug.option.optimization.level" valueType="enumerated"/>
 								<option id="gnu.c.compiler.exe.debug.option.debugging.level.365410073" name="Debug Level" superClass="gnu.c.compiler.exe.debug.option.debugging.level" value="gnu.c.debugging.level.max" valueType="enumerated"/>
-								<option id="gnu.c.compiler.option.include.paths.56996942" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths"/>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1964657324" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.405460921" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug"/>
 							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.2050636546" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug">
-								<option id="gnu.cpp.link.option.libs.384236150" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
+								<option id="gnu.cpp.link.option.libs.1448726295" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
+									<listOptionValue builtIn="false" value="jsoncpp"/>
+									<listOptionValue builtIn="false" value="PocoData"/>
+									<listOptionValue builtIn="false" value="PocoDataSQLite"/>
 									<listOptionValue builtIn="false" value="opencv_core"/>
 									<listOptionValue builtIn="false" value="opencv_imgproc"/>
 									<listOptionValue builtIn="false" value="opencv_calib3d"/>
@@ -54,9 +56,6 @@
 									<listOptionValue builtIn="false" value="armadillo"/>
 									<listOptionValue builtIn="false" value="lapack"/>
 									<listOptionValue builtIn="false" value="blas"/>
-									<listOptionValue builtIn="false" value="PocoData"/>
-									<listOptionValue builtIn="false" value="PocoDataSQLite"/>
-									<listOptionValue builtIn="false" value="jsoncpp"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.535543161" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
@@ -68,11 +67,26 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
+					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.563028870.746660133" name="unitTests.h" rcbsApplicability="disable" resourcePath="dataModel/unitTests.h" toolsToInvoke=""/>
+					<folderInfo id="cdt.managedbuild.config.gnu.exe.debug.563028870.1158568625" name="/" resourcePath="rest">
+						<toolChain id="cdt.managedbuild.toolchain.gnu.exe.debug.604605335" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.debug" unusedChildren="">
+							<targetPlatform id="cdt.managedbuild.target.gnu.platform.exe.debug" name="Debug Platform" superClass="cdt.managedbuild.target.gnu.platform.exe.debug"/>
+							<tool id="cdt.managedbuild.tool.gnu.archiver.base.1605432907" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base.1445850077"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.137589749" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.677144244">
+								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.954078808" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
+							</tool>
+							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1650214706" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1573551530">
+								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.2013759085" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
+							</tool>
+							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.1377662420" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug.405460921"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.475449915" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.2050636546"/>
+							<tool id="cdt.managedbuild.tool.gnu.assembler.exe.debug.77154351" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.debug.1147238441">
+								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.430265803" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
+							</tool>
+						</toolChain>
+					</folderInfo>
 					<sourceEntries>
-						<entry excluding="rest|commons|dataModel|analyser" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
-						<entry excluding="data/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="analyser"/>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="commons"/>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="dataModel"/>
+						<entry excluding="dataModel/unitTests.h|dataModel/unitTests.cpp|rest" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -145,17 +159,26 @@
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.563028870;cdt.managedbuild.config.gnu.exe.debug.563028870.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.677144244;cdt.managedbuild.tool.gnu.cpp.compiler.input.345622479">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.make.core.GCCStandardMakePerFileProfile"/>
+		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.1249511690;cdt.managedbuild.config.gnu.exe.release.1249511690.;cdt.managedbuild.tool.gnu.c.compiler.exe.release.370019862;cdt.managedbuild.tool.gnu.c.compiler.input.924853998">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.563028870;cdt.managedbuild.config.gnu.exe.debug.563028870.1158568625;cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.137589749;cdt.managedbuild.tool.gnu.cpp.compiler.input.954078808">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileCPP"/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.563028870;cdt.managedbuild.config.gnu.exe.debug.563028870.2104357480;cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.677144244.620565480;cdt.managedbuild.tool.gnu.cpp.compiler.input.1585296067">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileCPP"/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.1249511690;cdt.managedbuild.config.gnu.exe.release.1249511690.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.735801812;cdt.managedbuild.tool.gnu.cpp.compiler.input.749902763">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.563028870;cdt.managedbuild.config.gnu.exe.debug.563028870.;cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1573551530;cdt.managedbuild.tool.gnu.c.compiler.input.1964657324">
 			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.make.core.GCCStandardMakePerFileProfile"/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.563028870;cdt.managedbuild.config.gnu.exe.debug.563028870.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.677144244;cdt.managedbuild.tool.gnu.cpp.compiler.input.345622479">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.make.core.GCCStandardMakePerFileProfile"/>
-		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.1249511690;cdt.managedbuild.config.gnu.exe.release.1249511690.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.735801812;cdt.managedbuild.tool.gnu.cpp.compiler.input.749902763">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.563028870;cdt.managedbuild.config.gnu.exe.debug.563028870.1158568625;cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1650214706;cdt.managedbuild.tool.gnu.c.compiler.input.2013759085">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileC"/>
 		</scannerConfigBuildInfo>
 	</storageModule>
 </cproject>
