--- a/config2.json
+++ b/config2.json
@@ -1,5 +1,5 @@
 {"parameters": {
-	"file" : "~/dataBig/tiniestgist80million.bin",
+	"file" : "/home/amourao/dataBig/tiniestgist80million.bin",
     "nTrain": "100",
     "nValI": "100",
     "nValQ": "10",
