--- a/configSave.json
+++ b/configSave.json
@@ -9,8 +9,8 @@
     "type3": "nsBin",
 
     "nTrain": "100000",
-    "nValI": "1000",
-    "nValQ": "100",
+    "nValI": "100000",
+    "nValQ": "1000",
     "nTesI": "100000",
     "nTesQ": "100",
     "k": "10"
@@ -25,10 +25,15 @@
                 "distance": "EUCLIDEAN"
             }
         },{
-            "newName": "sh",
-            "originalName": "sphericalHashIndexer",
+            "newName": "autoConfig",
+            "originalName": "flannkNNIndexer",
             "params": {
-                "algorithm": "sh",
+                "algorithm": "auto",
+                "distance": "EUCLIDEAN",
+                "target_precision": ["0.5","0.55","0.6","0.65","0.7","0.75","0.8","0.85","0.9","0.95","1"],
+                "build_weight": "0.01",
+                "memory_weight": "0",
+                "sample_fraction": "1"
             }
         }
 
