--- a/config.json
+++ b/config.json
@@ -25,12 +25,42 @@
                 "distance": "EUCLIDEAN"
             }
         },{
-            "newName": "sh",
+            "newName": "lsh",
+            "originalName": "sphericalHashIndexer",
+            "params": {
+                "algorithm": "lsh",
+                "bCodeLen": ["32","64","128","256","512"],
+                "trainSamplesCount": "1000",
+                "examineRatio": "1"
+            }
+        },{
+            "newName": "sh_hd",
             "originalName": "sphericalHashIndexer",
             "params": {
                 "algorithm": "sh",
+                "distance": "hd",
+                "bCodeLen": ["32","64","128","256","512"],
+                "trainSamplesCount": "1000",
+                "incRatio": "0.5",
+                "overRatio": "0.25",
+                "epsMean": "0.1",
+                "epsStdDev": "0.15",
+                "maxItr": "50"
+            }
+        },{
+            "newName": "sh_shd",
+            "originalName": "sphericalHashIndexer",
+            "params": {
+                "algorithm": "sh",
+                "distance": "shd",
+                "bCodeLen": ["32","64","128","256","512"],
+                "trainSamplesCount": "1000",
+                "incRatio": "0.5",
+                "overRatio": "0.25",
+                "epsMean": "0.1",
+                "epsStdDev": "0.15",
+                "maxItr": "50"
             }
         }
-
     ]
 } }    
