--- a/configLSH.json
+++ b/configLSH.json
@@ -25,7 +25,7 @@
                 "distance": "EUCLIDEAN"
             }
         },{
-            "newName": "lsh3",
+            "newName": "lsh",
             "originalName": "lshIndexer",
             "params": {
                 "radius":  ["0.5","0.707107","0.8666"],
@@ -33,8 +33,8 @@
 
                 "k": ["2","4","6"],
                 "m": ["3","4","5"],
-                "l": ["3","6","10","12"],
-                "w": ["2"],
+                "l": ["3","6"],
+                "w": "2",
 
                 "t": "10000",
                 "ht": "3",
