Fixed MAP metric Fixed oneBillionImporter to handle reading outside file Added scripts to help parsing the output Added example file

--- a/condor/configCondor3.json
+++ b/condor/configCondor3.json
@@ -24,6 +24,13 @@
  "endpoints": {
     "indexer": [
         {
+            "newName": "linearIndexer",
+            "originalName": "flannkNNIndexer",
+            "params": {
+                "algorithm": "linear",
+                "distance": "EUCLIDEAN"
+            }
+        },{
             "newName": "sh_lsh",
             "originalName": "sphericalHashIndexer",
             "params": {
