--- a/searchservices.cbp
+++ b/searchservices.cbp
@@ -25,7 +25,7 @@
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="/media/Share/data/medicalClassifier/medicalClassifierData.txt" />
+				<Option parameters="default.json 0 1" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add directory="commons" />
@@ -64,7 +64,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="config.json" />
+				<Option parameters="default.json 0 2000" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="commons" />
@@ -112,10 +112,14 @@
 			<Option target="ReleaseMainInd" />
 		</Unit>
 		<Unit filename="analyser/nKeypoint/KeypointFeatureExtractor.h" />
+		<Unit filename="analyser/nKeypoint/SIFTExtractor.cpp" />
+		<Unit filename="analyser/nKeypoint/SIFTExtractor.h" />
 		<Unit filename="analyser/nKeypoint/SURFExtractor.cpp" />
 		<Unit filename="analyser/nKeypoint/SURFExtractor.h" />
 		<Unit filename="analyser/nRoi/FaceDetection.cpp" />
 		<Unit filename="analyser/nRoi/FaceDetection.h" />
+		<Unit filename="analyser/nRoi/HaarDetector.cpp" />
+		<Unit filename="analyser/nRoi/HaarDetector.h" />
 		<Unit filename="analyser/nRoi/RoiFeatureExtractor.h" />
 		<Unit filename="analyser/nTag/FaceRecognition.cpp" />
 		<Unit filename="analyser/nTag/FaceRecognition.h" />
