--- a/searchservices.cbp
+++ b/searchservices.cbp
@@ -83,17 +83,21 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-std=c++11" />
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 			<Add option="-DREAL_FLOAT" />
 			<Add option="-DUSE_GIST" />
 			<Add option="-DSTANDALONE_GIST" />
+			<Add option="-DPOCO_NO_FPENVIRONMENT" />
 			<Add directory="/home/amourao/myLibs/include/" />
+			<Add directory="/home/amourao/code/sparsereconstruction/" />
 		</Compiler>
 		<Linker>
-			<Add option="-lhdf5 -lflann -ljsoncpp -lopencv_core -lopencv_imgproc -lopencv_calib3d -lopencv_video -lopencv_photo -lopencv_features2d -lopencv_ml -lopencv_highgui -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_nonfree -lfftw3f -lfftw3 -lm -lopencv_legacy -lopencv_flann -larmadillo -llapack -lblas -lPocoFoundation -lPocoData -lPocoDataSQLite -lPocoNet -lPocoXML -lPocoJSON -lPocoUtil -lcurl -lvw" />
+			<Add option="-fopenmp -lhdf5 -lflann -ljsoncpp -lopencv_core -lopencv_imgproc -lopencv_calib3d -lopencv_video -lopencv_photo -lopencv_features2d -lopencv_ml -lopencv_highgui -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_nonfree -lfftw3f -lfftw3 -lm -lopencv_legacy -lopencv_flann -larmadillo -llapack -lblas -lPocoFoundation -lPocoData -lPocoDataSQLite -lPocoNet -lPocoXML -lPocoJSON -lPocoUtil -lcurl -lpugixml" />
 			<Add directory="/home/amourao/myLibs/lib/" />
 			<Add directory="/home/amourao/myLibs/include/" />
+			<Add directory="/home/amourao/code/sparsereconstruction/" />
 		</Linker>
 		<Unit filename="analyser/FactoryAnalyser.cpp" />
 		<Unit filename="analyser/FactoryAnalyser.h" />
@@ -233,6 +237,8 @@
 		<Unit filename="indexer/LSHIndexer.h" />
 		<Unit filename="indexer/MSIDXIndexer.cpp" />
 		<Unit filename="indexer/MSIDXIndexer.h" />
+		<Unit filename="indexer/SRIndexer.cpp" />
+		<Unit filename="indexer/SRIndexer.h" />
 		<Unit filename="indexer/SphericalHashIndexer.cpp" />
 		<Unit filename="indexer/SphericalHashIndexer.h" />
 		<Unit filename="indexer/e2lsh/BasicDefinitions.h" />
