--- a/searchservices.cbp
+++ b/searchservices.cbp
@@ -64,7 +64,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="0.7 0.3 1 5 /home/amourao/code/shotdetection/bin/minecraft_cedd.bin /home/amourao/code/shotdetection/bin/league_cedd.bin,/home/amourao/code/shotdetection/bin/kizomba_cedd.bin,/home/amourao/code/shotdetection/bin/zumba_cedd.bin,/home/amourao/code/shotdetection/bin/touro_cedd.bin,/home/amourao/code/shotdetection/bin/caricas_cedd.bin,/home/amourao/code/shotdetection/bin/violetta_cedd.bin" />
+				<Option parameters="0.05 0.3 1 5 /home/amourao/code/shotdetection/bin/minecraft_cedd.bin /home/amourao/code/shotdetection/bin/league_cedd.bin,/home/amourao/code/shotdetection/bin/kizomba_cedd.bin,/home/amourao/code/shotdetection/bin/zumba_cedd.bin,/home/amourao/code/shotdetection/bin/touro_cedd.bin,/home/amourao/code/shotdetection/bin/caricas_cedd.bin,/home/amourao/code/shotdetection/bin/violetta_cedd.bin,/home/amourao/code/shotdetection/bin/blip_cedd.bin" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="commons" />
@@ -195,6 +195,8 @@
 		<Unit filename="analyser/tools/MIRFlickrImporter.h" />
 		<Unit filename="analyser/tools/MatrixTools.cpp" />
 		<Unit filename="analyser/tools/MatrixTools.h" />
+		<Unit filename="analyser/tools/ShotDetector.cpp" />
+		<Unit filename="analyser/tools/ShotDetector.h" />
 		<Unit filename="analyser/tools/TestFunctions.cpp" />
 		<Unit filename="analyser/tools/TrainTestFeaturesTools.cpp" />
 		<Unit filename="analyser/tools/TrainTestFeaturesTools.h" />
@@ -286,6 +288,8 @@
 		<Unit filename="rest/Endpoints/analyser/MedicalSearchEngine.h" />
 		<Unit filename="rest/Endpoints/analyser/SearchResult.cpp" />
 		<Unit filename="rest/Endpoints/analyser/SearchResult.h" />
+		<Unit filename="rest/Endpoints/analyser/VideoTagger.cpp" />
+		<Unit filename="rest/Endpoints/analyser/VideoTagger.h" />
 		<Unit filename="rest/Endpoints/codebits/Codebits.cpp" />
 		<Unit filename="rest/Endpoints/codebits/Codebits.h" />
 		<Unit filename="rest/Endpoints/database/GetMetadata.cpp" />
