--- a/searchservices.cbp
+++ b/searchservices.cbp
@@ -25,7 +25,7 @@
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="0.7 0.3 0.9 5 /home/amourao/code/shotdetection/bin/caricas_cedd.bin /home/amourao/code/shotdetection/bin/league_cedd.bin,/home/amourao/code/shotdetection/bin/kizomba_cedd.bin,/home/amourao/code/shotdetection/bin/touro_cedd.bin,/home/amourao/code/shotdetection/bin/violetta_cedd.bin,/home/amourao/code/shotdetection/bin/minecraft_cedd.bin,/home/amourao/code/shotdetection/bin/zumba_cedd.bin  middleOnly" />
+				<Option parameters="0.7 0.3 4 80 /home/amourao/code/shotdetection/bin/minecraft_cedd.bin /home/amourao/code/shotdetection/bin/blip_cedd.bin" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add directory="commons" />
@@ -64,7 +64,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="/media/Share/data/sapo/frames/sapo_keyframes_full_info_violetta cedd kizomba_cedd kizomba_cedd.bin true default.json" />
+				<Option parameters="0.7 0.3 4 80 /home/amourao/code/shotdetection/bin/minecraft_cedd.bin /home/amourao/code/shotdetection/bin/blip_cedd.bin" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="commons" />
