--- a/searchservices.cbp
+++ b/searchservices.cbp
@@ -124,7 +124,7 @@
 				</Linker>
 			</Target>
 			<Target title="ReleaseEusipco">
-				<Option output="bin/Release/runIndexer" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/runEusipco" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -138,7 +138,7 @@
 				</Linker>
 			</Target>
 			<Target title="DebugEusipco">
-				<Option output="bin/Debug/runIndexer" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/runEusipco" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
