--- a/searchservices.cbp
+++ b/searchservices.cbp
@@ -11,7 +11,7 @@
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="~/code/searchservices/default.json" />
+				<Option parameters="/home/amourao/Desktop/configCondor7_a2.json" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add directory="commons" />
@@ -53,7 +53,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="~/code/searchservices/default.json" />
+				<Option parameters="/home/amourao/Desktop/configCondor7_a2.json" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="commons" />
