--- a/searchservices.cbp
+++ b/searchservices.cbp
@@ -11,7 +11,7 @@
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="/home/amourao/Desktop/0002_BV1_a.json" />
+				<Option parameters="billionB /home/amourao/Desktop/queries.bvecs 10" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add directory="commons" />
@@ -53,7 +53,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="/home/amourao/Desktop/0002_BV1_a.json 1 " />
+				<Option parameters="billionB /home/amourao/Desktop/queries.bvecs 10" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="commons" />
@@ -1070,6 +1070,8 @@
 			<Option target="ReleaseEusipco" />
 			<Option target="DebugEusipco" />
 		</Unit>
+		<Unit filename="analyser/tools/oneBillionImporterB.cpp" />
+		<Unit filename="analyser/tools/oneBillionImporterB.h" />
 		<Unit filename="analyser/tools/tinyImageImporter.cpp">
 			<Option target="ReleaseMainInd" />
 			<Option target="ReleaseMainAna" />
